diesel_compile_tests/tests/ui/sql_type_bad_options.stderr
error: `postgres` must be in the form `postgres(...)`
 --> $DIR/sql_type_bad_options.rs:5:3
  |
5 | #[postgres]
  |   ^^^^^^^^

warning: Option oid has no effect
 --> $DIR/sql_type_bad_options.rs:9:31
  |
9 | #[postgres(type_name = "foo", oid = "2", array_oid = "3")]
  |                               ^^^

warning: Option array_oid has no effect
 --> $DIR/sql_type_bad_options.rs:9:42
  |
9 | #[postgres(type_name = "foo", oid = "2", array_oid = "3")]
  |                                          ^^^^^^^^^

error: Missing required option `array_oid`
  --> $DIR/sql_type_bad_options.rs:13:3
   |
13 | #[postgres(oid = "2")]
   |   ^^^^^^^^

error: Expected a number
  --> $DIR/sql_type_bad_options.rs:17:18
   |
17 | #[postgres(oid = "NaN", array_oid = "1")]
   |                  ^^^^^

warning: Option ary_oid has no effect
  --> $DIR/sql_type_bad_options.rs:21:25
   |
21 | #[postgres(oid = "NaN", ary_oid = "1")]
   |                         ^^^^^^^

error: Missing required option `array_oid`
  --> $DIR/sql_type_bad_options.rs:21:3
   |
21 | #[postgres(oid = "NaN", ary_oid = "1")]
   |   ^^^^^^^^

error: `postgres` must be in the form `postgres(...)`
  --> $DIR/sql_type_bad_options.rs:25:3
   |
25 | #[postgres = "foo"]
   |   ^^^^^^^^

error: aborting due to 5 previous errors

